# Comp-for-DS-Class-Note

Day4/: Scratch1.py
Day6/: Note.py
EDA library/simple-eda-project/: .gitignore  LICENSE  README.md  pyproject.toml
EDA library/simple-eda-project/src/simple_eda/: __init__.py  core.py
EDA library/simple-eda-project/tests/: test_core.py
