[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-eda-dzhu9"
version = "0.1.0"
description = "Tiny EDA helper for pandas"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "dzhu9" }]
keywords = ["eda", "pandas", "data-analysis"]
dependencies = ["pandas>=1.5"]

[project.urls]
Homepage = "https://github.com/helloadder/ds-class-note"

[tool.setuptools.packages.find]
where = ["src"]
